--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ CLOUDINARY_API_SECRET=tD8jSB3hJZo5kJMs1J0hYxaMU4k
 
 VITE_CLOUDINARY_PRESET=my_upload_preset
 VITE_CLOUDINARY_URL=https://api.cloudinary.com/v1_1/diccuaubj/image/upload
+
+VITE_EMAILJS_SERVICE_ID=service_jthic1f
+VITE_EMAILJS_TEMPLATE_ID=template_814bsps
+VITE_EMAILJS_PUBLIC_KEY=tExxj-bheNbcXjn12
